# undr9

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  DEVELOPERS.md  Dockerfile  README.md  debug-reconnect-missing-nodes.md  docker-compose.yml  docker-entrypoint.sh
.github/workflows/: ci.yml  docker.yml
crates/api/: Cargo.toml
crates/api/src/: lib.rs
crates/auth/: Cargo.toml
crates/auth/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cluster/: Cargo.toml
crates/cluster/src/: lib.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/index/: Cargo.toml
crates/index/src/: lib.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs
crates/observability/: Cargo.toml
crates/observability/src/: lib.rs
crates/query/: Cargo.toml
crates/query/src/: lib.rs
crates/replication/: Cargo.toml
crates/replication/src/: lib.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/storage/tests/: compatibility.rs  recovery.rs  transactions.rs
crates/wal/: Cargo.toml
crates/wal/src/: lib.rs
deployments/docker/: README.md
docs/: clean_developer_uses.html  developer-usage.html  hnsw-implementation-plan.md  implementation-roadmap.md  repository-structure.md  subsystem-specifications.md
docs/adr/: 0001-sdk-scope-python-only.md  0002-v1-transaction-boundary.md  0003-milestone-3-retrieval-properties.md  0004-milestone-5-transaction-model.md  0005-storage-record-format.md  0006-serialization-format.md  0007-segment-layout.md  0008-wal-format.md  0009-compaction-strategy.md  0010-vector-similarity-metric.md  0011-memory-metadata-namespace.md  0012-snapshot-format.md  0013-api-versioning-strategy.md  0014-property-type-system.md  0015-consolidation-audit-trail.md  0016-retrieval-profile-versioning.md  0017-rust-workspace-structure.md  0018-error-model.md  0019-benchmark-strategy.md  README.md
docs/api/: http.md
docs/architecture/: milestone-1-storage.md  milestone-2-query-api.md  milestone-3-retrieval-sdk.md  milestone-4-operations.md  milestone-5-transactions.md  milestone-6-replication.md
docs/audits/: README.md  enterprise-operations-audit.md  failure-injection-report.md  query-engine-audit.md  scalability-envelope-report.md  security-architecture-review.md  storage-architecture-audit.md
docs/blog/: why-we-abandoned-string-parsed-queries.md
docs/onboarding/: development.md
docs/operations/: one-node.md  recovery-drill-report.json  single-node-benchmark-100k.json  single-node-benchmark-10m-storage.json  single-node-benchmark-1m-storage.json  single-node-benchmark-baseline.json
scripts/: run-benchmarks.sh  run-compatibility.sh  run-large-scale-benchmarks.sh  run-recovery-drill.sh
