[workspace]
members = [
    "crates/common",
    "crates/config",
    "crates/core",
    "crates/storage",
    "crates/wal",
    "crates/index",
    "crates/query",
    "crates/memory",
    "crates/auth",
    "crates/api",
    "crates/observability",
    "crates/replication",
    "crates/cluster",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "Apache-2.0"
repository = "https://github.com/undr9/undr9"
homepage = "https://github.com/undr9/undr9"
documentation = "https://github.com/undr9/undr9/tree/main/docs"
authors = ["UNDR9 Contributors"]

[workspace.dependencies]
axum = "0.7"
clap = { version = "4.5", features = ["derive"] }
crc32fast = "1.4"
dashmap = "6"
hnsw_stable = { package = "hnsw-stable", version = "0.10.1" }
http = "1"
im = { version = "15", features = ["serde"] }
rkyv = { version = "0.7.46", features = ["validation"] }
postcard = { version = "1", features = ["alloc"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
opentelemetry = { version = "0.31", features = ["trace"] }
opentelemetry_sdk = { version = "0.31", features = ["trace"] }
opentelemetry-otlp = { version = "0.31", features = ["trace", "grpc-tonic", "http-proto", "reqwest-blocking-client"] }
tracing-opentelemetry = "0.32"
