[package]
name = "undr9-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
undr9-common = { path = "../common" }
undr9-config = { path = "../config" }
