[package]
name = "undr9-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

[dependencies]
crc32fast.workspace = true
serde.workspace = true
thiserror.workspace = true
