[package]
name = "undr9-query"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

[dependencies]
im.workspace = true
serde.workspace = true
undr9-common = { path = "../common" }
undr9-core = { path = "../core" }
undr9-index = { path = "../index" }
undr9-memory = { path = "../memory" }
