[package]
name = "undr9-wal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
authors.workspace = true

[dependencies]
postcard.workspace = true
serde.workspace = true
serde_json.workspace = true
undr9-common = { path = "../common" }
undr9-config = { path = "../config" }

[dev-dependencies]
tempfile.workspace = true
